# ZoomUploader

./: .gitignore  Dockerfile  INSTRUCTIONS.md  LICENSE  MEDIA_ISSUES_SUMMARY.md  Makefile  README.md  WHAT_WAS_DONE.md  __init__.py  alembic.ini  cli_helpers.py  docker-compose.yml  dump.rdb  entrypoint.sh  logger.py  main.py  pipeline_manager.py  plan.md  pyproject.toml  requirements.txt  ruff.toml  setup_vk.py  setup_youtube.py  temp_check_raw_data.py  temp_show_raw_example.py  test_deepseek.py  test_deepseek_fireworks.py  test_fireworks_transcription.py  test_subtitle_generator.py
alembic/: env.py
alembic/versions/: 001_create_base_tables.py  002_add_auth_tables.py  003_add_multitenancy.py  004_add_config_type_field.py  005_add_account_name_to_credentials.py  006_add_foreign_keys_to_sources_and_presets.py  007_create_user_configs.py  008_update_platform_enum.py  009_add_unique_constraint_to_input_sources.py  010_add_fsm_fields_to_output_targets.py  011_update_processing_status_enum.py  012_add_automation_quotas.py  013_create_automation_jobs.py  014_create_celery_beat_tables.py  015_add_timezone_to_users.py  016_refactor_quota_system.py  017_add_template_id_to_recordings.py  018_add_blank_record_flag.py  019_replace_audio_dir_with_path.py  0ea6e15db6bc_add_input_source_to_recordings.py  59461e085eec_add_transcription_fields.py  add_account_name_to_credentials.py  add_auth_tables.py  add_config_type_field.py  add_full_multitenancy.py
api/: __init__.py  celery_app.py  config.py  dependencies.py  main.py  token_manager.py  zoom_api.py
api/auth/: admin.py  (+3 more)
config/: __init__.py  default_user_config.json  oauth_google.json.example  oauth_vk.json.example  settings.py  unified_config.py
database/: __init__.py  auth_models.py  automation_models.py  config.py  config_models.py  manager.py  models.py  template_models.py
deepseek_module/: __init__.py  config.py  topic_extractor.py
docs/: ADR.md  ADR_FEATURES.md  ADR_OVERVIEW.md  API_CONSISTENCY_AUDIT.md  API_GUIDE.md  AUTOMATION_IMPLEMENTATION_PLAN.md  BULK_OPERATIONS_GUIDE.md  CHANGELOG.md  CREDENTIALS_GUIDE.md  DATABASE_DESIGN.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_2026-01-12.md  FIREWORKS_BATCH_API.md  INDEX.md  MEDIA_SYSTEM_AUDIT.md  OAUTH.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  OAUTH_UPLOADER_INTEGRATION.md  PLAN.md  PLATFORM_SPECIFIC_METADATA.md  PRESET_METADATA_GUIDE.md  SECURITY_QUICKSTART.md  STORAGE_STRUCTURE.md  TECHNICAL.md  TEMPLATES.md  TEMPLATE_REMATCH_FEATURE.md  UPDATES.md  VK_INTEGRATION.md  VK_POLICY_UPDATE_2026.md  VK_TOKEN_API.md  WHAT_WAS_DONE.md
fireworks_module/: __init__.py  config.py  service.py
models/: __init__.py  recording.py
openai_module/: __init__.py  audio_compressor.py  config.py  service.py  transcription_service.py
subtitle_module/: __init__.py  subtitle_generator.py
transcription_module/: __init__.py  factory.py  manager.py  service.py
utils/: __init__.py  audio_compressor.py  cost_calculator.py  create_test_user.py  data_processing.py  date_utils.py  file_utils.py  formatting.py  interactive_mapper.py  migrate_thumbnails.py  quick_stats.py  spinner.py  thumbnail_manager.py  title_mapper.py  usage_stats.py  user_paths.py
video_download_module/: __init__.py  downloader.py
video_processing_module/: __init__.py  audio_detector.py  config.py  segments.py  video_processor.py
video_upload_module/: __init__.py  config_factory.py  credentials_provider.py  factory.py  uploader_factory.py
(+157 files in other folders)
