[project]
name = "zoomtest"
version = "0.1.0"
description = "Zoom video processing pipeline for automatic video downloads and uploads"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Gordey Zuev", email = "gordey.zuev@gmail.com"}
]
dependencies = [
    # Core async & HTTP
    "aiohttp>=3.13.1",
    "httpx>=0.24.0",
    "asyncpg>=0.29.0",
    
    # Web framework
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "greenlet>=3.2.4",
    
    # Task queue
    "celery>=5.6.1",
    "redis>=5.0.0",
    
    # Security
    "bcrypt>=5.0.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    
    # CLI & UI
    "click>=8.0.0",
    "rich>=14.2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.1.1",
    
    # Video processing
    "ffmpeg-python>=0.2.0",
    
    # Google/YouTube API
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    
    # VK API
    "vk-api>=11.10.0",
    
    # AI/Transcription
    "fireworks-ai>=0.15.15",
    "openai>=2.8.1",
    
    # Dev tools
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "config",
    "database",
    "models",
    "utils",
    "video_download_module",
    "video_processing_module",
    "video_upload_module",
]
force-single-line = false
combine-as-imports = true
